clang/test/utils/update-verify-tests/Inputs/update-single-check.c
// RUN: %clang_cc1 -verify %s
// RUN: diff %s %s.expected
void foo() {
    // expected-error@+1{{asdf}}
    bar = 2;
}
